public_html/style.css
body {
    margin: 0;
    color: white;
    overflow: hidden;
}
html {
  min-height: 100%;
  -webkit-tap-highlight-color: transparent;
}
::-webkit-scrollbar {
  width: 0.7vw;
}
::-webkit-scrollbar-track {
  background: rgba(255,255,255,0.3);
}
::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.6);
}
::-webkit-scrollbar-thumb:hover {
  background: aqua;
}

#global-content {
  position: relative;
  perspective-origin: center;
  perspective: 2000px;
  overflow: hidden;
}
#nav-s {
  min-width: 100%;
  text-align: center;
}
#nav-s td {
  width: 33%;
}
#carousel {
  position: absolute;
  transform-style: preserve-3d;
  height: 100%;
  width: 100%;
  transition: transform 0.7s cubic-bezier(0.45, 0.05, 0.55, 0.95);
  transform: rotateY(0deg);
  cursor: grab;
  user-select: none;
  animation: rotate-prompt 5s infinite;
}
.nav-c {
  top: 50%;
  left: 50%;
  position: absolute;
  align-items: center;
  margin: 0;
  text-align: center;
  background-color: darkblue; 
  box-shadow: inset 1px 1px 30px 0px black;
  border-radius: 10%;
  width: max(40vw,30vh);
  height: 45%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  font-size: min(2vh,2.5vw);
  color:black;
  transform-style: preserve-3d;
}
.nav-c tbody, .nav-c thead, .nav-c tr {
  transform-style: preserve-3d;
  transform: perspective(2000px);
}
.nav-c thead {
  height: 17%;
}
.nav-c tbody {
  display: block;
  height: 100%;
  overflow: auto;
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: max(1.5vh,1vw);
  padding-inline: 5%;
}
.nav-c tbody td {
  padding-top: 2%;
  padding-bottom: 2%;
  text-align: justify;
}
.nav-c tbody td img {
  shape-outside: circle();
  max-width: min(40%,25vh);
  float: right;
  border-radius: 50%;
  margin-left: 5%;
  pointer-events: none;
}
.nav-c tbody td p {
  margin: 0;
}
.nav-c th {
  font-size: min(3.5vh,5vw);
  height: 20%;
  display: table-cell;
  vertical-align: middle;
  transform: translateZ(10px) perspective(2000px);
  transform-style: preserve-3d;
  cursor: pointer;
}
.nav-c th::before {
  position: absolute;
  color: transparent;
  z-index: -1;
  transform: translateZ(-10px);
  text-shadow: 1px 1px 2px black;
}
.nav-c:nth-child(1) thead {
  color: lightgreen;
}
.nav-c thead:hover {
  color: white !important;
  background-color: rgba(0,0,0,0.1);
}
.nav-c:nth-child(1) th::before {
  content: "💾 My Apps 💾"
}
.nav-c:nth-child(1) {
  transform: translate(-50%, -50%) rotateY(-55deg) translateZ(max(40vw,30vh)) perspective(2000px);
  -ms-transform: translate(-50%, -50%) rotateY(120deg) translateZ(max(40vw,30vh)) perspective(2000px);
  background-image: linear-gradient(180deg,rgba(50,100,0, 0.9) 17%, rgba(0, 255, 0, 0.8) 19%);
}
.nav-c:nth-child(2) thead, .nav-c:nth-child(2) tr:nth-child(even) {
  color: aqua;
}
.nav-c:nth-child(2) th::before {
  content: "About Me ^^"
}
.nav-c:nth-child(2) {
  color: white;
  transform: translate(-50%, -50%) rotateY(0deg) translateZ(max(40vw,30vh)) perspective(2000px);
  -ms-transform: translate(-50%, -50%) translateZ(max(40vw,30vh)) perspective(2000px);
  background-image: linear-gradient(180deg,rgba(0,0,100, 0.7) 17%, rgba(0, 0, 255, 0.8) 19%);
}
.nav-c:nth-child(3) thead {
  color: pink;
}
.nav-c:nth-child(3) th::before {
  content: "Endorsements"
}
.nav-c:nth-child(3) {
  transform: translate(-50%, -50%) rotateY(55deg) translateZ(max(40vw,30vh)) perspective(2000px);
  -ms-transform: translate(-50%, -50%) rotateY(120deg) translateZ(max(40vw,30vh)) perspective(2000px);
  background-image: linear-gradient(180deg,rgba(100,0,0, 0.7) 17%, rgba(255, 0, 0, 0.8) 19%);
}

